Set global form input line height to "normal" to fix webkit text entry bug where the cursor would appear too tall and then change to the correct height once you started typing.

--- a/app/assets/stylesheets/forms.sass
+++ b/app/assets/stylesheets/forms.sass
@@ -121,7 +121,7 @@ select,
   width: 210px
   padding: 4px
   font-size: 14px
-  line-height: 37px
+  line-height: normal
   height: 37px
   color: #444
   border-width: 1px 
